--- a/Course Project Sections/03-CSS-Fundamentals/style.css
+++ b/Course Project Sections/03-CSS-Fundamentals/style.css
@@ -24,6 +24,8 @@ h3 {
 h4 {
   text-align: center;
   font-size: 20px;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 p {
@@ -36,6 +38,20 @@ li {
   font-size: 20px;
 }
 
+.author {
+  font-style: italic;
+  font-size: 18px;
+}
+
+.related-author {
+  font-size: 18px;
+  font-weight: bold;
+}
+
 .related-posts {
   list-style: none;
+}
+
+footer p {
+  font-size: 16px;
 }
