--- a/Course Project Sections/03-CSS-Fundamentals/style.css
+++ b/Course Project Sections/03-CSS-Fundamentals/style.css
@@ -7,6 +7,12 @@ li {
   font-family: sans-serif;
 }
 
+h1,
+h2,
+h3 {
+  color: #1098ad;
+}
+
 h1 {
   font-size: 26px;
   text-transform: uppercase;
@@ -28,6 +34,12 @@ h4 {
   text-align: center;
 }
 
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5xp solid #1098ad;
+}
+
 p {
   font-size: 22px;
   line-height: 1.5;
@@ -36,6 +48,11 @@ p {
 
 li {
   font-size: 20px;
+  color: #444;
+}
+
+.main-header {
+  background-color: #f7f7f7;
 }
 
 .author {
