--- a/Course Project Sections/03-CSS-Fundamentals/style.css
+++ b/Course Project Sections/03-CSS-Fundamentals/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: sans-serif;
   color: #444;
@@ -18,10 +23,13 @@ h1 {
 
 h2 {
   font-size: 40px;
+  margin-bottom: 30px;
 }
 
 h3 {
   font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 
 h4 {
@@ -35,23 +43,52 @@ nav {
   font-size: 18px;
 }
 
+article {
+  margin-bottom: 60px;
+}
+
 aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5xp solid #1098ad;
+  /* padding-top: 50px;
+  padding-bottom: 50px; */
+  padding: 50px 0;
 }
 
 p {
   font-size: 22px;
   line-height: 1.5;
+  margin-bottom: 15px;
+}
+
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
 }
 
 li {
   font-size: 20px;
+  margin-bottom: 10px;
+}
+
+/*Eliminating margin space for the last li element*/
+li:last-child {
+  margin-bottom: 0;
 }
 
 .main-header {
+  /* padding: 20px;
+  padding-left: 40px;
+  padding-right: 40px; */
+  padding: 20px 40px;
+  margin-bottom: 60px;
   background-color: #f7f7f7;
+}
+
+.post-header {
+  margin-bottom: 40px;
 }
 
 .author {
