--- a/Course Project Sections/03-CSS-Fundamentals/style.css
+++ b/Course Project Sections/03-CSS-Fundamentals/style.css
@@ -54,6 +54,7 @@ aside {
   /* padding-top: 50px;
   padding-bottom: 50px; */
   padding: 50px 0;
+  width: 500px;
 }
 
 p {
@@ -85,6 +86,7 @@ li:last-child {
   padding: 20px 40px;
   margin-bottom: 60px;
   background-color: #f7f7f7;
+  height: 80px;
 }
 
 .post-header {
@@ -128,4 +130,9 @@ a:hover {
 a:active {
   background-color: black;
   font-style: italic;
+}
+
+.post-image {
+  width: 100%;
+  height: auto;
 }
