--- a/Course Project Sections/03-CSS-Fundamentals/style.css
+++ b/Course Project Sections/03-CSS-Fundamentals/style.css
@@ -9,6 +9,13 @@ body {
   border-top: 10px solid #1098ad;
 }
 
+.main-container {
+  width: 800px;
+  /* margin-left: auto;
+  margin-right: auto; */
+  margin: 0 auto;
+}
+
 h1,
 h2,
 h3 {
@@ -50,7 +57,7 @@ article {
 aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
-  border-bottom: 5xp solid #1098ad;
+  border-bottom: 5px solid #1098ad;
   /* padding-top: 50px;
   padding-bottom: 50px; */
   padding: 50px 0;
