--- a/Course Project Sections/03-CSS-Fundamentals/component e-commerce store mini project/shoesStyle.css
+++ b/Course Project Sections/03-CSS-Fundamentals/component e-commerce store mini project/shoesStyle.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   color: #444;
   font-family: sans-serif;
@@ -5,13 +10,16 @@ body {
 }
 
 .product {
-  border: 4px solid black;
+  border: 4px solid #000000;
+  width: 825px;
+  margin: 50px auto;
 }
 
 h2 {
   text-align: center;
   background-color: #f7f7f7;
-  font-size: 30px;
+  font-size: 22px;
+  padding: 15px;
 }
 
 h2,
@@ -30,11 +38,12 @@ button {
   font-size: 12px;
   font-weight: bold;
   color: #777777;
+  margin-bottom: 20px;
 }
 
 .more-info:link,
 .more-info:visited {
-  color: black;
+  color: #000000;
 }
 
 .more-info:hover,
@@ -42,22 +51,31 @@ button {
   text-decoration: none;
 }
 
-.details-list {
-  list-style-type: square;
-}
-
 .details-title {
   font-size: 16px;
+  margin-bottom: 15px;
+  margin-top: 30px;
 }
 
-button {
+.details-list {
+  list-style-type: square;
+  margin-left: 20px;
+}
+
+.details-list li {
+  margin-bottom: 10px;
+}
+
+.add-cart {
+  width: 100%;
   border: none;
   background-color: #000000;
   color: #fff;
   font-size: 20px;
+  border-top: 4px solid #000000;
 }
 
-button:hover {
+.add-cart:hover {
   background-color: #ffffff;
   color: #000000;
   cursor: pointer;
