--- a/Course Project Sections/03-CSS-Fundamentals/style.css
+++ b/Course Project Sections/03-CSS-Fundamentals/style.css
@@ -143,3 +143,13 @@ a:active {
   width: 100%;
   height: auto;
 }
+
+nav a:link {
+  display: inline-block;
+  margin-top: 10px;
+  margin-right: 20px;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
+}
