--- a/Course Project Sections/03-CSS-Fundamentals/style.css
+++ b/Course Project Sections/03-CSS-Fundamentals/style.css
@@ -7,6 +7,7 @@ body {
   font-family: sans-serif;
   color: #444;
   border-top: 10px solid #1098ad;
+  position: relative;
 }
 
 .main-container {
@@ -152,4 +153,16 @@ nav a:link {
 
 nav a:link:last-child {
   margin-right: 0;
+}
+
+.like-button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+  text-transform: uppercase;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  bottom: 100px;
+  right: 100px;
 }
