--- a/Course Project Sections/03-CSS-Fundamentals/style.css
+++ b/Course Project Sections/03-CSS-Fundamentals/style.css
@@ -32,6 +32,7 @@ h1 {
 h2 {
   font-size: 40px;
   margin-bottom: 30px;
+  position: relative;
 }
 
 h3 {
@@ -160,9 +161,25 @@ nav a:link:last-child {
   padding: 20px;
   cursor: pointer;
   text-transform: uppercase;
-  width: 100px;
-  height: 100px;
   position: absolute;
   bottom: 100px;
   right: 100px;
+}
+
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
+}
+
+h2::after {
+  content: "TOP MAG";
+  font-size: 16px;
+  color: #444;
+  background-color: #ffe70e;
+  position: absolute;
+  top: -10px;
+  right: -50px;
+  display: inline-block;
+  padding: 5px 10px;
+  font-weight: bold;
 }
