--- a/Course Project Sections/03-CSS-Fundamentals/component e-commerce store mini project/shoesStyle.css
+++ b/Course Project Sections/03-CSS-Fundamentals/component e-commerce store mini project/shoesStyle.css
@@ -13,6 +13,7 @@ body {
   border: 4px solid #000000;
   width: 825px;
   margin: 50px auto;
+  position: relative;
 }
 
 h2 {
@@ -26,6 +27,25 @@ h2,
 h3,
 button {
   text-transform: uppercase;
+}
+
+/*Adding SALE pseudo element*/
+/*Adjacent sibling combinator*/
+img + p::before {
+  content: "sale";
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 15px;
+  font-weight: bold;
+  letter-spacing: 3px;
+  background-color: #ff0000;
+  color: #ffffff;
+  display: inline-block;
+  width: 50px;
+  padding: 7px 15px;
+  position: absolute;
+  top: -20px;
+  left: -25px;
 }
 
 .price {
@@ -49,6 +69,40 @@ button {
 .more-info:hover,
 .more-info:active {
   text-decoration: none;
+}
+
+.color {
+  display: inline-block;
+  margin-right: 10px;
+  margin-top: 20px;
+  background-color: #000000;
+  height: 20px;
+  width: 20px;
+}
+
+.color-blue {
+  background-color: blue;
+}
+
+#blue {
+  background-color: blue;
+}
+
+.color-red {
+  background-color: red;
+}
+
+.color-orange {
+  background-color: orange;
+}
+
+.color-green {
+  background-color: yellowgreen;
+}
+
+.color-choices div:last-child {
+  background-color: brown;
+  margin: 0;
 }
 
 .details-title {
