--- a/Course Project Sections/04-CSS-Layouts/style.css
+++ b/Course Project Sections/04-CSS-Layouts/style.css
@@ -184,3 +184,30 @@ h2::after {
   padding: 5px 10px;
   font-weight: bold;
 }
+
+/*Float layout*/
+.author-img {
+  float: left;
+  margin-bottom: 20px;
+}
+
+.author {
+  float: left;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+h1 {
+  float: left;
+}
+
+nav {
+  float: right;
+}
+
+/*Clear fix hack*/
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: block;
+}
