--- a/Course Project Sections/04-CSS-Layouts/component e-commerce store mini project/shoesStyle.css
+++ b/Course Project Sections/04-CSS-Layouts/component e-commerce store mini project/shoesStyle.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -30,8 +31,7 @@ button {
 }
 
 /*Adding SALE pseudo element*/
-/*Adjacent sibling combinator*/
-img + p::before {
+h2::before {
   content: "sale";
   text-transform: uppercase;
   text-align: center;
@@ -47,6 +47,7 @@ img + p::before {
   top: -20px;
   left: -25px;
 }
+/*rewrite suing class rather adjacent selector*/
 
 .price {
   font-size: 24px;
@@ -59,6 +60,10 @@ img + p::before {
   font-weight: bold;
   color: #777777;
   margin-bottom: 20px;
+}
+
+.text-info {
+  margin-bottom: 10px;
 }
 
 .more-info:link,
@@ -108,7 +113,7 @@ img + p::before {
 .details-title {
   font-size: 16px;
   margin-bottom: 15px;
-  margin-top: 30px;
+  margin-top: 15px;
 }
 
 .details-list {
@@ -122,6 +127,7 @@ img + p::before {
 
 .add-cart {
   width: 100%;
+  height: 35px;
   border: none;
   background-color: #000000;
   color: #fff;
@@ -133,4 +139,33 @@ img + p::before {
   background-color: #ffffff;
   color: #000000;
   cursor: pointer;
+}
+
+/*Page layout using Floats*/
+/* (825 - 8 - 250 - 40 - 40) / 2 =
+243 px individual width per container excluding the img */
+
+.img-container {
+  float: left;
+}
+
+.product-info-container,
+.product-details-container {
+  width: 243px;
+  float: left;
+  margin-left: 40px;
+}
+
+.product-info-container {
+  margin-top: 10px;
+}
+
+.shipping {
+  float: right;
+  margin-top: 10px;
+}
+
+.product-info-container p:first-child {
+  margin-bottom: 20px;
+  display: inline-block;
 }
