--- a/Course Project Sections/04-CSS-Layouts/style.css
+++ b/Course Project Sections/04-CSS-Layouts/style.css
@@ -107,11 +107,14 @@ li:last-child {
 .author {
   font-style: italic;
   font-size: 18px;
+  margin-bottom: 0;
 }
 
 .related-author {
+  margin-bottom: 0;
   font-size: 18px;
-  font-weight: bold;
+  font-weight: normal;
+  font-style: italic;
 }
 
 .related-posts {
@@ -151,7 +154,6 @@ a:active {
 
 nav a:link {
   display: inline-block;
-  margin-top: 10px;
   margin-right: 20px;
 }
 
@@ -188,6 +190,7 @@ h2::after {
 }
 
 /*Float layout*/
+/*
 .author-img {
   float: left;
   margin-bottom: 20px;
@@ -207,7 +210,7 @@ nav {
   float: right;
 }
 
-/*Clear fix hack*/
+Clear fix hack
 .clearfix::after {
   content: "";
   clear: both;
@@ -226,4 +229,32 @@ aside {
 
 footer {
   clear: both;
+}
+*/
+
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.author-box {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 15px;
+}
+
+.related-post-el {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.related-link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  display: block;
 }
