--- a/Course Project Sections/04-CSS-Layouts/component e-commerce store mini project/shoesStyle.css
+++ b/Course Project Sections/04-CSS-Layouts/component e-commerce store mini project/shoesStyle.css
@@ -59,7 +59,7 @@ h2::before {
   font-size: 12px;
   font-weight: bold;
   color: #777777;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .text-info {
@@ -77,19 +77,15 @@ h2::before {
 }
 
 .color {
-  display: inline-block;
+  /* display: inline-block;
   margin-right: 10px;
-  margin-top: 20px;
+  margin-top: 20px; */
   background-color: #000000;
   height: 20px;
   width: 20px;
 }
 
 .color-blue {
-  background-color: #0000ff;
-}
-
-#blue {
   background-color: #0000ff;
 }
 
@@ -125,6 +121,10 @@ h2::before {
   margin-bottom: 10px;
 }
 
+li:last-child {
+  margin-bottom: 0;
+}
+
 .add-cart {
   width: 100%;
   height: 35px;
@@ -141,10 +141,14 @@ h2::before {
   cursor: pointer;
 }
 
+.img-container {
+  height: 250px;
+}
+
 /*Page layout using Floats*/
 /* (825 - 8 - 250 - 40 - 40) / 2 =
 243 px individual width per container excluding the img */
-
+/*
 .img-container {
   float: left;
 }
@@ -168,4 +172,34 @@ h2::before {
 .product-info-container p:first-child {
   margin-bottom: 20px;
   display: inline-block;
+}
+*/
+
+/*Page layout using flex box model*/
+.container {
+  display: flex;
+  gap: 25px;
+}
+
+.product-info-container,
+.product-details-container {
+  flex: 1;
+}
+
+.product-price {
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.color-choices {
+  display: flex;
+  gap: 15px;
+}
+
+.more-info:link {
+  display: inline-block;
+  margin-bottom: 30px;
 }
