--- a/Course Project Sections/04-CSS-Layouts/style.css
+++ b/Course Project Sections/04-CSS-Layouts/style.css
@@ -91,7 +91,7 @@ li:last-child {
   padding-left: 40px;
   padding-right: 40px; */
   padding: 20px 40px;
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
   background-color: #f7f7f7;
   height: 80px;
 }
@@ -228,7 +228,8 @@ footer {
 }
 */
 
-.main-header {
+/*Flex-Box Layout Model*/
+/* .main-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -260,15 +261,38 @@ footer {
   align-items: flex-start;
   gap: 75px;
   margin-bottom: 60px;
-}
+} */
 
-aside {
-  /*Flex Property
+/* aside { */
+/*Flex Property
   flex-basis: 300px;
   flex-shrink: 0;*/
-  flex: 0 0 300px;
+/* flex: 0 0 300px; */
+/* } */
+
+/* article {
+  flex: 0 0 825px;
+} */
+
+/*CSS-Grid Layout Model*/
+.main-container {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  column-gap: 75px;
+  row-gap: 60px;
+  align-items: start;
 }
 
-article {
-  flex: 0 0 825px;
+.main-header {
+  /* grid-column: 1 / span 2; */
+  grid-column: 1 / -1;
+}
+
+footer {
+  grid-column: 1 / -1;
+}
+
+.main-header {
+  display: flex;
+  justify-content: space-between;
 }
