--- a/Course Project Sections/05-Design/style.css
+++ b/Course Project Sections/05-Design/style.css
@@ -25,13 +25,14 @@ body {
 }
 
 header,
-section {
-  margin-bottom: 48px;
-}
-
+section,
 h2 {
   margin-bottom: 48px;
 }
+
+/* h2 {
+  margin-bottom: 48px;
+} */
 
 .grid-3-cols {
   display: grid;
