--- a/Course Project Sections/05-Design/style.css
+++ b/Course Project Sections/05-Design/style.css
@@ -16,7 +16,7 @@ FONT SIZE SYSTEM (px)
 /* GENERAL STYLES */
 /* ------------------------ */
 body {
-  font-family: sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .container {
@@ -25,14 +25,16 @@ body {
 }
 
 header,
-section,
-h2 {
+section {
   margin-bottom: 48px;
 }
 
-/* h2 {
+h2 {
   margin-bottom: 48px;
-} */
+  font-size: 36px;
+  letter-spacing: -0.5px;
+  /* / 24 / 30 / 36  */
+}
 
 .grid-3-cols {
   display: grid;
@@ -54,10 +56,15 @@ header {
 
 .header-text-box {
   align-self: center;
+  font-size: 18px;
+  line-height: 1.7;
 }
 
 h1 {
-  margin-bottom: 24px;
+  margin-bottom: 44px;
+  line-height: 1.1;
+  letter-spacing: -1px;
+  /* 44 / 52 / 62  */
 }
 
 .header-text {
@@ -74,9 +81,12 @@ img {
 
 .features-title {
   margin-bottom: 16px;
+  font-size: 20px;
 }
 
 .features-text {
+  font-size: 18px;
+  line-height: 1.7;
 }
 
 /* TESTIMONIAL */
@@ -90,11 +100,15 @@ img {
 
 .testimonial-box h2 {
   margin-bottom: 24px;
+  font-size: 24px;
+  /* 20 / 24 / 30 */
 }
 
 .testimonial-text {
   font-style: italic;
   margin-bottom: 24px;
+  font-size: 18px;
+  line-height: 1.7;
 }
 
 /* CHAIRS */
@@ -104,6 +118,7 @@ img {
 
 h3 {
   margin-bottom: 24px;
+  font-size: 20px;
 }
 
 .chair-details {
@@ -128,8 +143,10 @@ h3 {
 .chair-price {
   display: flex;
   justify-content: space-between;
+  font-size: 20px;
 }
 
 footer {
   margin-bottom: 48px;
+  font-size: 14px;
 }
