--- a/Course Project Sections/07-Omnifood-Desktop/css/style.css
+++ b/Course Project Sections/07-Omnifood-Desktop/css/style.css
@@ -56,22 +56,7 @@ body {
   color: #555;
 }
 
-.section-hero {
-  background-color: #fdf2e9;
-  padding: 9.6rem 0;
-}
-
-.hero-container {
-  /* max-width: 1300px; */
-  max-width: 130rem;
-  margin: 0 auto;
-
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 9.6rem;
-  align-items: center;
-}
-
+/* General Reusable Components */
 .heading-primary {
   font-size: 5.2rem;
   font-weight: 700;
@@ -79,17 +64,6 @@ body {
   letter-spacing: -0.5px;
   margin-bottom: 3.2rem;
   color: #333;
-}
-
-.hero-description {
-  font-size: 2rem;
-  line-height: 1.6;
-  margin-bottom: 4.8rem;
-}
-
-.hero-image {
-  width: 100%;
-  /* Fill entire parent element -> hero image box (also column) */
 }
 
 .btn:link,
@@ -137,6 +111,53 @@ body {
   /* Helper class */
   margin-right: 1.6rem !important;
 }
+/* *************************************************** */
+
+/* Header */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+
+  /* Because we want header to be sticky later on */
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+
+.logo {
+  height: 2.2rem;
+}
+/* *************************************************** */
+
+/* Hero Section */
+.section-hero {
+  background-color: #fdf2e9;
+  padding: 4.8rem 0 9.6rem 0;
+}
+
+.hero-container {
+  /* max-width: 1300px; */
+  max-width: 130rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 9.6rem;
+  align-items: center;
+}
+
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 4.8rem;
+}
+
+.hero-image {
+  width: 100%;
+  /* Fill entire parent element -> hero image box (also column) */
+}
 
 .delivered-meals {
   display: flex;
@@ -172,3 +193,4 @@ body {
   color: #cf711f;
   font-weight: 700;
 }
+/* *************************************************** */
