--- a/Course Project Sections/07-Omnifood-Desktop/css/style.css
+++ b/Course Project Sections/07-Omnifood-Desktop/css/style.css
@@ -3,11 +3,18 @@
 - Font sizes (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 
+
 - Font weights:
 Default: 400
+500
+600
+700
+
 
 - Line heights:
 Default: 1
+Small: 1.5
+Paragraph default: 1.6
 
 
 --02 COLORS
@@ -27,6 +34,7 @@ Default: 1
 
 
 --05 BORDER-RADIUS 
+Default 9px
 
 
 --06 WHITESPACE
@@ -127,6 +135,45 @@ body {
 
 .logo {
   height: 2.2rem;
+}
+/* *************************************************** */
+
+/* NAVIGATION */
+.main-nav-list {
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+
+  list-style: none;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #cf711f;
 }
 /* *************************************************** */
 
