Building Meals Section - partial II.

--- a/Course Project Sections/07-Omnifood-Desktop/css/general.css
+++ b/Course Project Sections/07-Omnifood-Desktop/css/general.css
@@ -37,7 +37,8 @@ Medium: 1.2
 
 
 --05 BORDER-RADIUS 
-Default 9px
+Default: 9px
+Medium: 11px
 
 
 --06 WHITESPACE
@@ -178,5 +179,9 @@ body {
 .margin-right-sm {
   /* Helper class */
   margin-right: 1.6rem !important;
+}
+
+strong {
+  font-weight: 500;
 }
 /* *************************************************** */
