--- a/Course Project Sections/07-Omnifood-Desktop/css/general.css
+++ b/Course Project Sections/07-Omnifood-Desktop/css/general.css
@@ -147,7 +147,8 @@ body {
   text-decoration: none;
 
   /* Put transition state on original "state"/rule we want to transition from */
-  transition: background-color 0.3s;
+  /* transition: background-color 0.3s; */
+  transition: all 0.3s;
 }
 
 .btn--full:link,
@@ -176,9 +177,35 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
+.link:link,
+.link:visited {
+  display: inline-block;
+
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
+}
+
+/* Helper Classes/Settings Classes */
 .margin-right-sm {
   /* Helper class */
   margin-right: 1.6rem !important;
+}
+
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+  text-align: center;
 }
 
 strong {
