--- a/Course Project Sections/07-Omnifood-Desktop/css/general.css
+++ b/Course Project Sections/07-Omnifood-Desktop/css/general.css
@@ -25,7 +25,7 @@ Medium: 1.2
 - Tints: #fdf2e9; #fae5d3;
 - Shades: #cf711f, #733f11;
 - Accents:
-- Greys: #555, #333;
+- Greys: #555, #333, #6f6f6f;
 
 
 --03 IMG
