--- a/Course Project Sections/07-Omnifood-Desktop/css/style.css
+++ b/Course Project Sections/07-Omnifood-Desktop/css/style.css
@@ -15,7 +15,7 @@
 }
 /* *************************************************** */
 
-/* NAVIGATION */
+/* Navigation */
 .main-nav-list {
   display: flex;
   align-items: center;
@@ -119,7 +119,7 @@
 }
 /* *************************************************** */
 
-/* FEATURED IN SECTION */
+/* Featured In Section */
 .section-featured {
   padding: 4.8rem 3.2rem 0;
 }
@@ -147,7 +147,7 @@
 
 /* *************************************************** */
 
-/* HOW IT WORKS SECTION */
+/* How It Works Section */
 .section-how-works {
   padding: 9.6rem 0;
 }
@@ -211,7 +211,7 @@
 }
 /* *************************************************** */
 
-/* MEALS SECTION */
+/* Meals Section */
 .section-meals {
   padding: 9.6rem 0;
 }
@@ -328,5 +328,65 @@
 .all-recipes {
   font-size: 1.8rem;
   text-align: center;
+}
+/* *************************************************** */
+
+/* Testimonials Section */
+.section-testimonials {
+  display: grid;
+  grid-template-columns: 55fr 45fr;
+  align-items: center;
+
+  background-color: #fdf2e9;
+}
+
+.testimonials-container {
+  padding: 9.6rem;
+}
+
+.testimonials {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 4.8rem;
+  column-gap: 8rem;
+}
+
+.testimonial-img {
+  width: 6.4rem;
+  border-radius: 50%;
+  margin-bottom: 1.2rem;
+}
+
+.testimonial-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 1.6rem;
+}
+
+.testimonial-name {
+  font-size: 1.6rem;
+  color: #6f6f6f;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.6rem;
+  padding: 1.6rem;
+}
+
+.gallery-item img {
+  display: block;
+  width: 100%;
+  transition: all 0.5s;
+}
+
+.gallery-item {
+  overflow: hidden;
+}
+
+.gallery-item img:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
 /* *************************************************** */
