--- a/Course Project Sections/07-Omnifood-Desktop/css/style.css
+++ b/Course Project Sections/07-Omnifood-Desktop/css/style.css
@@ -144,7 +144,6 @@
   filter: brightness(0);
   opacity: 50%;
 }
-
 /* *************************************************** */
 
 /* How It Works Section */
@@ -298,28 +297,6 @@
   width: 100%;
 }
 
-.list-diets {
-  display: flex;
-  flex-direction: column;
-  gap: 1.6rem;
-
-  list-style: none;
-}
-
-.list-icon {
-  width: 3rem;
-  height: 3rem;
-  color: #e67e22;
-}
-
-.list-item {
-  display: flex;
-  align-items: center;
-  gap: 1.6rem;
-
-  font-size: 1.8rem;
-}
-
 .list-item span:hover {
   cursor: pointer;
   color: #e67e22;
@@ -388,5 +365,112 @@
 .gallery-item img:hover {
   cursor: pointer;
   transform: scale(1.1);
+}
+/* *************************************************** */
+
+/* Pricing Section */
+.section-pricing {
+  padding: 9.6rem 0;
+}
+
+.pricing-plan {
+  border-radius: 11px;
+  width: 75%;
+}
+
+.pricing-plan--first--col {
+  justify-self: end;
+  border: 3px solid #fdf2e9;
+  padding: 4.5rem;
+}
+
+.pricing-plan--second--col {
+  position: relative;
+
+  background-color: #fdf2e9;
+  padding: 4.8rem;
+
+  overflow: hidden;
+}
+
+.pricing-plan--second--col::after {
+  position: absolute;
+  top: 6%;
+  right: -18%;
+  transform: rotate(45deg);
+  padding: 0.8rem 8rem;
+
+  content: "Best Value";
+  color: #333;
+  background-color: #ffd43b;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.plan-header {
+  text-align: center;
+  margin-bottom: 4.8rem;
+}
+
+.plan-name {
+  color: #cf711f;
+  font-weight: 600;
+  font-size: 2rem;
+  letter-spacing: 0.75;
+  text-transform: uppercase;
+  margin-bottom: 3.2rem;
+}
+
+.plan-price {
+  font-size: 6.2rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 1.6rem;
+}
+
+.plan-text {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  color: #6f6f6f;
+}
+
+.plan-price span {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-right: 0.8rem;
+}
+
+.plan-sing-up {
+  text-align: center;
+  margin-top: 4.8rem;
+}
+
+.plan-details {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  text-align: center;
+}
+
+.feature-icon {
+  color: #e67e22;
+  background-color: #fdf2e9;
+  height: 3.2rem;
+  width: 3.2rem;
+  margin-bottom: 3.2rem;
+  padding: 1.6rem;
+  border-radius: 50%;
+}
+
+.feature-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 700;
+  margin-bottom: 1.6rem;
+}
+
+.feature-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
 }
 /* *************************************************** */
