--- a/Course Project Sections/07-Omnifood-Desktop/css/style.css
+++ b/Course Project Sections/07-Omnifood-Desktop/css/style.css
@@ -491,9 +491,6 @@
 
   /* gradient */
   background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
-
-  /* temp height */
-  height: 50rem;
 }
 
 .cta-text-box {
@@ -508,7 +505,8 @@
 }
 
 .cta .heading-secondary {
-  color: #2e1907;
+  /* color: #2e1907; */
+  color: inherit;
   margin-bottom: 3.2rem;
 }
 
@@ -529,5 +527,37 @@
   grid-template-columns: 1fr 1fr;
   column-gap: 3.2rem;
   row-gap: 2.4rem;
+}
+
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 1.2rem;
+}
+
+.cta-form input,
+.cta-form select {
+  width: 100%;
+  font-size: 1.8rem;
+  padding: 1.2rem;
+  border: none;
+  border-radius: 9px;
+  background-color: #fdf2e9;
+  font-family: inherit;
+  color: inherit;
+
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.cta-form input::placeholder {
+  color: #aaa;
+}
+
+.cta *:focus {
+  outline: none;
+
+  /* Trick to add border inside/outside the element, not outside */
+  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
 }
 /* *************************************************** */
