--- a/Course Project Sections/07-Omnifood-Desktop/css/style.css
+++ b/Course Project Sections/07-Omnifood-Desktop/css/style.css
@@ -477,7 +477,8 @@
 
 /* Call To Action/CTA Section */
 .section-cta {
-  padding: 9.6rem 0;
+  /* top - right - bottom - left */
+  padding: 4.8rem 0 12.8rem 0;
 }
 
 .cta {
@@ -559,5 +560,85 @@
 
   /* Trick to add border inside/outside the element, not outside */
   box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
+}
+/* *************************************************** */
+
+/* Footer Section */
+.footer {
+  padding: 12.8rem 0;
+  border-top: 1px solid #eee;
+}
+
+.grid-footer {
+  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+}
+
+.logo-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-logo {
+  display: block;
+
+  margin-bottom: 3.2rem;
+}
+
+.social-links {
+  display: flex;
+  gap: 2.4rem;
+
+  list-style: none;
+}
+
+.social-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+}
+
+.copyright {
+  font-size: 1.4rem;
+  color: #767676;
+  line-height: 1.6;
+
+  margin-top: auto;
+}
+
+.footer-heading {
+  font-size: 1.8rem;
+  font-weight: 500;
+  margin-bottom: 3.2rem;
+}
+
+.contacts {
+  font-style: normal;
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+
+.contacts p:first-child {
+  margin-bottom: 2.4rem;
+}
+
+.footer-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+
+  list-style: none;
+}
+
+.footer-link:link,
+.footer-link:visited {
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #767676;
+
+  transition: all 0.3s;
+}
+
+.footer-link:hover,
+.footer-link:active {
+  color: #555;
 }
 /* *************************************************** */
