Added a grey tint/shade.

--- a/Course Project Sections/07-Omnifood-Desktop/css/general.css
+++ b/Course Project Sections/07-Omnifood-Desktop/css/general.css
@@ -25,7 +25,7 @@ Medium: 1.2
 - Tints: #fdf2e9; #fae5d3; #eb984e;
 - Shades: #cf711f; #733f11; #45260a;
 - Accents:
-- Greys: #555; #333; #6f6f6f;
+- Greys: #555; #333; #6f6f6f; #767676;
 
 
 --03 IMG
