--- a/Course Project Sections/07-Omnifood-Desktop/css/general.css
+++ b/Course Project Sections/07-Omnifood-Desktop/css/general.css
@@ -23,9 +23,9 @@ Medium: 1.2
 --02 COLORS
 - Primary: #e67e22;
 - Tints: #fdf2e9; #fae5d3; #eb984e;
-- Shades: #cf711f; #733f11; #45260a;
+- Shades: #45260a; #733f11; #cf711f; 
 - Accents:
-- Greys: #555; #333; #6f6f6f; #767676;
+- Greys:  #333; #555; #767676; #6f6f6f;
 
 
 --03 IMG
