--- a/Course Project Sections/08-Omnifood-Responsive/css/general.css
+++ b/Course Project Sections/08-Omnifood-Responsive/css/general.css
@@ -14,6 +14,7 @@ Default: 1
 Small: 1.5
 Paragraph default: 1.6
 Medium: 1.2
+Large 1.8
 
 - Letter spacing
 -0.5px
@@ -244,6 +245,7 @@ body {
   gap: 1.6rem;
 
   font-size: 1.8rem;
+  line-height: 1.2;
 }
 
 *:focus {
