--- a/Course Project Sections/08-Omnifood-Responsive/css/queries.css
+++ b/Course Project Sections/08-Omnifood-Responsive/css/queries.css
@@ -121,4 +121,68 @@ Spacing system (px)
   .btn--form {
     margin-top: 1.2rem;
   }
+
+  .btn-mobile-nav {
+    display: block;
+  }
+
+  .header {
+    position: relative;
+  }
+
+  .main-nav {
+    background-color: rgba(255, 255, 255, 0.97);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transition: all 0.7s ease-in;
+
+    transform: translateX(100%);
+
+    /* Hiding the nav */
+    /* Allows no transition at all */
+    /* display: none; */
+
+    /* 1) Hide element visually */
+    opacity: 0;
+
+    /* 2) Make it unaccessible to mouse and keyboard(TAB) */
+    pointer-events: none;
+
+    /* 3) Hide it from screen readers */
+    visibility: none;
+  }
+
+  .nav-open .main-nav {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    /* Common property used for transitions */
+    transform: translateX(0);
+  }
+
+  .nav-open .icon-mobile-nav[name="close-outline"] {
+    display: block;
+  }
+
+  .nav-open .icon-mobile-nav[name="menu-outline"] {
+    display: none;
+  }
+
+  .main-nav-list {
+    flex-direction: column;
+    gap: 4.8rem;
+  }
+
+  .main-nav-link:link,
+  .main-nav-link:visited {
+    font-size: 3rem;
+  }
 }
