--- a/Course Project Sections/09-Omnifood-Optimizations/css/style.css
+++ b/Course Project Sections/09-Omnifood-Optimizations/css/style.css
@@ -13,7 +13,7 @@
 .logo {
   height: 2.2rem;
 }
-/* *************************************************** */
+/* ********************************************************************** */
 
 /* Navigation */
 .main-nav-list {
@@ -75,7 +75,7 @@
 .icon-mobile-nav[name="close-outline"] {
   display: none;
 }
-/* *************************************************** */
+/* ********************************************************************** */
 
 /* Sticky Navigation */
 .sticky-nav .header {
@@ -96,8 +96,7 @@
 .sticky-nav .section-hero {
   margin-top: 9.6rem;
 }
-
-/* *************************************************** */
+/* ********************************************************************** */
 
 /* Hero Section */
 .section-hero {
@@ -162,7 +161,7 @@
   color: #cf711f;
   font-weight: 700;
 }
-/* *************************************************** */
+/* ********************************************************************** */
 
 /* Featured In Section */
 .section-featured {
@@ -189,7 +188,7 @@
   filter: brightness(0);
   opacity: 50%;
 }
-/* *************************************************** */
+/* ********************************************************************** */
 
 /* How It Works Section */
 .section-how-works {
@@ -253,7 +252,7 @@
 .step-img {
   width: 35%;
 }
-/* *************************************************** */
+/* ********************************************************************** */
 
 /* Meals Section */
 .section-meals {
@@ -351,7 +350,7 @@
   font-size: 1.8rem;
   text-align: center;
 }
-/* *************************************************** */
+/* ********************************************************************** */
 
 /* Testimonials Section */
 .section-testimonials {
@@ -411,7 +410,7 @@
   cursor: pointer;
   transform: scale(1.1);
 }
-/* *************************************************** */
+/* ********************************************************************** */
 
 /* Pricing Section */
 .section-pricing {
@@ -518,7 +517,7 @@
   font-size: 1.8rem;
   line-height: 1.8;
 }
-/* *************************************************** */
+/* ********************************************************************** */
 
 /* Call To Action/CTA Section */
 .section-cta {
@@ -606,7 +605,7 @@
   /* Trick to add border inside/outside the element, not outside */
   box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
 }
-/* *************************************************** */
+/* ********************************************************************** */
 
 /* Footer Section */
 .footer {
@@ -686,4 +685,4 @@
 .footer-link:active {
   color: #555;
 }
-/* *************************************************** */
+/* ********************************************************************** */
