--- a/Course Project Sections/09-Omnifood-Optimizations/css/general.css
+++ b/Course Project Sections/09-Omnifood-Optimizations/css/general.css
@@ -264,6 +264,7 @@ body {
   /* Trick to add border inside/outside the element, not outside */
   box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
+/* ********************************************************************** */
 
 /* Helper Classes/Settings Classes */
 .margin-right-sm {
@@ -282,4 +283,4 @@ body {
 strong {
   font-weight: 500;
 }
-/* *************************************************** */
+/* ********************************************************************** */
